# fizzy-cli

./: .fz.toml  CLAUDE.md  Cargo.toml  README.md
.claude/: settings.json
src/: cli.rs  client.rs  config.rs  main.rs  models.rs  output.rs  project.rs
src/commands/: accounts.rs  agent.rs  boards.rs  cards.rs  columns.rs  comments.rs  init.rs  login.rs  mod.rs  notifications.rs  pins.rs  reactions.rs  steps.rs  tags.rs  users.rs  webhooks.rs
src/tui/: app.rs  event.rs  mod.rs  theme.rs  ui.rs
