[package]
name = "fz"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "fz"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "cookies"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
directories = "6"
dialoguer = "0.11"
comfy-table = "7"
colored = "3"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
url = "2"
